--- a/app/index.yaml
+++ b/app/index.yaml
@@ -9,3 +9,9 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: NewsItem
+  properties:
+  - name: is_sentiment_processed
+  - name: created_on
+    direction: desc
