- organized imports/modules and added a few deps

--- a/app/index.yaml
+++ b/app/index.yaml
@@ -12,6 +12,8 @@ indexes:
 
 - kind: NewsItem
   properties:
+  - name: username
+  - name: type
   - name: is_sentiment_processed
   - name: created_on
     direction: desc
