--- a/buildout.cfg
+++ b/buildout.cfg
@@ -55,6 +55,8 @@ eggs =
     babel
     gaepytz
     wtforms
+    rfc3339
+    python-dateutil
 
 # Don't copy files that match these glob patterns.
 ignore-globs =
