--- a/app/app.yaml
+++ b/app/app.yaml
@@ -4,7 +4,7 @@ runtime: python
 api_version: 1
 
 builtins:
-- appstats: off
+- appstats: on
 - datastore_admin: on
 - remote_api: on
 
@@ -24,7 +24,7 @@ error_handlers:
   file: templates/error_handlers/timeout.html
 
 handlers:
-  
+    
 - url: /jobs/.*
   script: main.py
   login: admin
